
    o callBins() can now also use cutoffs instead of CGHcall

    o binReadCounts() now contains parameter pairedEnds to specify when using
      paired-end data, so that expected variance can be calculated correctly

    o segmentBins() now allows seeds for random number generation to be
      specified for reproducibility

    o binReadCounts() supports chunked processing of bam files

BUG FIXES 

    o applyFilters() and highlightFilters() now work properly when using a
      numerical value for parameter residual

    o highlightFilters() no longer highlights entire chromosomes for which
      the residual filter is missing altogether, which matches the behavior of
      applyFilters()

    o getBinAnnotations() now allows custom bin annotations to be loaded via
      the path parameter even when an annotation package has been installed

    o phenodata files with a single variable are now handled correctly

    o calculateMappability() now retains correct chromosome order even when
      bigWigAverageOverBed reorders them

Changes in version 1.6.0 (2015-10-14)
-------------------------------------

RELEASE

    o Bioconductor 3.2

IMPROVEMENTS

    o chromosomes() no longer tries to return chromosome names as an integer
      vector, but returns a character vector instead

BUG FIXES

    o plot() and calculateMappability() now work also for other chromosome
      names besides numbers and "X", "Y", and "MT"

Changes in version 1.4.2 (2015-08-20)
-------------------------------------

BUG FIXES

    o createBins() now properly selects chromosomes when ignoring 
      mitochondrial DNA. Please note that the mitochondrial DNA is only 
      ignored when it is called either "chrMT", "chrM", "MT", or "M"

Changes in version 1.4.1 (2015-06-30)
-------------------------------------

IMPROVEMENTS

    o correctBins() now filters out bins with missing loess correction estimate

Changes in version 1.4.0 (2015-04-17)
-------------------------------------

RELEASE
