@@ -31,6 +31,9 @@
 #         (as estimated with @see "matrixStats::madDiff") the cutoff for removal
 #         of bins with median residuals larger than the cutoff. Not used if
 #         \code{maxIter=1} (default).}
+#     \item{variables}{A character vector specifying which variables to include
+#         in the correction. Can be \code{c("gc", "mappability")} (the default),
+#         \code{"gc"}, or \code{"mappability"}.}
 #     \item{...}{Additional aguments passed to @see "stats::loess".}
 # }
 #
@@ -59,14 +62,17 @@
 setMethod("estimateCorrection", signature=c(object="QDNAseqReadCounts"),
     definition=function(object, span=0.65, family="symmetric",
     adjustIncompletes=TRUE, maxIter=1, cutoff=4.0,
-    ...) {
+    variables=c("gc", "mappability"), ...) {
 
     counts <- assayDataElement(object, "counts")
     if (adjustIncompletes) {
         counts <- counts / fData(object)$bases * 100L
         counts[fData(object)$bases == 0] <- 0L
     }
-    vmsg("Calculating correction for GC content and mappability:")
+    variables <- match.arg(variables, several.ok=TRUE)
+    descriptions <- c(gc="GC content", mappability="mappability")
+    vmsg("Calculating correction for ",
+        paste(descriptions[variables], collapse=" and "))
     if (length(span) == 1L)
         span <- rep(span, times=ncol(counts))
     if (length(family) == 1L)
@@ -103,7 +109,7 @@ setMethod("estimateCorrection", signature=c(object="QDNAseqReadCounts"),
                 FUN=median)
             rownames(median.counts) <- paste0(median.counts$gc, "-",
                 median.counts$mappability)
-            l <- loess(x ~ gc * mappability,
+            l <- loess(formula(paste("x ~", paste(variables, collapse=" * "))),
                 data=median.counts, span=span[i], family=family[i], ...)
             # fit <- l$fitted
             # names(fit) <- rownames(median.counts)
